Storefront: Fix ProductCard overflow.

--- a/apps/storefront/src/components/product-card/product-card.module.scss
+++ b/apps/storefront/src/components/product-card/product-card.module.scss
@@ -94,6 +94,7 @@
         gap: 0.15rem;
 
         width: 100%;
+        min-width: 0;
         height: 100%;
 
         font-size: 2.25rem;
@@ -111,6 +112,7 @@
             font-weight: 650;
             -webkit-hyphens: auto;
             hyphens: auto;
+            word-wrap: break-word;
         }
 
         .brand {
